--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1616060698998992698400afet\n",
-      "10ibc/605C5B80A8253543F8038F96F56BA13BDD8D300E12F1B32A3FA2E1EB2A933FA1\n",
-      "5000000ibc/B58E6786772640EC4B538AFC4393F742C326734B74CCAFAFBF7EFDC7D435B428\n"
+     "ename": "AttributeError",
+     "evalue": "type object 'NetworkConfig' has no attribute 'oraichain'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcosmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39maerial\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient\u001b[39;00m \u001b[39mimport\u001b[39;00m LedgerClient, NetworkConfig\n\u001b[1;32m      3\u001b[0m \u001b[39m# connect to Fetch.ai network using default parameters\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m ledger_client \u001b[39m=\u001b[39m LedgerClient(NetworkConfig\u001b[39m.\u001b[39moraichain())\n\u001b[1;32m      6\u001b[0m alice: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfetch12q5gw9l9d0yyq2th77x6pjsesczpsly8h5089x\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      7\u001b[0m balances \u001b[39m=\u001b[39m ledger_client\u001b[39m.\u001b[39mquery_bank_all_balances(alice)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'NetworkConfig' has no attribute 'oraichain'"
      ]
     }
    ],
@@ -31,28 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2824814456.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    make docs-live\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "make docs-live"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cfg = NetworkConfig(\n",
+    "    chain_id=\"cosmoshub-4\",\n",
+    "    url=\"grpc+https://grpc-cosmoshub.blockapsis.com:429\",\n",
+    "    fee_minimum_gas_price=1,\n",
+    "    fee_denomination=\"uatom\",\n",
+    "    staking_denomination=\"uatom\",\n",
+    ")\n",
+    "\n",
+    "ledger_client = LedgerClient(cfg)\n"
+   ]
   }
  ],
  "metadata": {
