--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -38,11 +38,11 @@
    "outputs": [],
    "source": [
     "cfg = NetworkConfig(\n",
-    "    chain_id=\"cosmoshub-4\",\n",
-    "    url=\"grpc+https://grpc-cosmoshub.blockapsis.com:429\",\n",
+    "    chain_id=\"Oraichain\",\n",
+    "    url=\"grpc+http://18.223.242.70:9090\",\n",
     "    fee_minimum_gas_price=1,\n",
-    "    fee_denomination=\"uatom\",\n",
-    "    staking_denomination=\"uatom\",\n",
+    "    fee_denomination=\"orai\",\n",
+    "    staking_denomination=\"orai\",\n",
     ")\n",
     "\n",
     "ledger_client = LedgerClient(cfg)\n"
