--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -2,52 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'NetworkConfig' has no attribute 'oraichain'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcosmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39maerial\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient\u001b[39;00m \u001b[39mimport\u001b[39;00m LedgerClient, NetworkConfig\n\u001b[1;32m      3\u001b[0m \u001b[39m# connect to Fetch.ai network using default parameters\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m ledger_client \u001b[39m=\u001b[39m LedgerClient(NetworkConfig\u001b[39m.\u001b[39moraichain())\n\u001b[1;32m      6\u001b[0m alice: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfetch12q5gw9l9d0yyq2th77x6pjsesczpsly8h5089x\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      7\u001b[0m balances \u001b[39m=\u001b[39m ledger_client\u001b[39m.\u001b[39mquery_bank_all_balances(alice)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'NetworkConfig' has no attribute 'oraichain'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from cosmpy.aerial.client import LedgerClient, NetworkConfig\n",
-    "\n",
-    "# connect to Fetch.ai network using default parameters\n",
-    "ledger_client = LedgerClient(NetworkConfig.oraichain())\n",
-    "\n",
-    "alice: str = 'fetch12q5gw9l9d0yyq2th77x6pjsesczpsly8h5089x'\n",
-    "balances = ledger_client.query_bank_all_balances(alice)\n",
-    "\n",
-    "# show all coin balances\n",
-    "for coin in balances:\n",
-    "  print(f'{coin.amount}{coin.denom}')"
+    "from cosmpy.aerial.client import LedgerClient, NetworkConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "_InactiveRpcError",
-     "evalue": "<_InactiveRpcError of RPC that terminated with:\n\tstatus = StatusCode.INVALID_ARGUMENT\n\tdetails = \"rpc error: code = InvalidArgument desc = invalid address: invalid Bech32 prefix; expected orai, got fetch: invalid request\"\n\tdebug_error_string = \"{\"created\":\"@1666768922.751477000\",\"description\":\"Error received from peer ipv4:18.223.242.70:9090\",\"file\":\"src/core/lib/surface/call.cc\",\"file_line\":967,\"grpc_message\":\"rpc error: code = InvalidArgument desc = invalid address: invalid Bech32 prefix; expected orai, got fetch: invalid request\",\"grpc_status\":3}\"\n>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31m_InactiveRpcError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [5], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m ledger_client \u001b[39m=\u001b[39m LedgerClient(cfg)\n\u001b[1;32m     10\u001b[0m alice: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfetch12q5gw9l9d0yyq2th77x6pjsesczpsly8h5089x\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m---> 11\u001b[0m balances \u001b[39m=\u001b[39m ledger_client\u001b[39m.\u001b[39mquery_bank_all_balances(alice)\n\u001b[1;32m     13\u001b[0m \u001b[39m# show all coin balances\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m coin \u001b[39min\u001b[39;00m balances:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/cosmpy/aerial/client/__init__.py:299\u001b[0m, in \u001b[0;36mLedgerClient.query_bank_all_balances\u001b[0;34m(self, address)\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[39m\"\"\"Query bank all balances.\u001b[39;00m\n\u001b[1;32m    294\u001b[0m \n\u001b[1;32m    295\u001b[0m \u001b[39m:param address: address\u001b[39;00m\n\u001b[1;32m    296\u001b[0m \u001b[39m:return: bank all balances\u001b[39;00m\n\u001b[1;32m    297\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    298\u001b[0m req \u001b[39m=\u001b[39m QueryAllBalancesRequest(address\u001b[39m=\u001b[39m\u001b[39mstr\u001b[39m(address))\n\u001b[0;32m--> 299\u001b[0m resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbank\u001b[39m.\u001b[39;49mAllBalances(req)\n\u001b[1;32m    301\u001b[0m \u001b[39mreturn\u001b[39;00m [Coin(amount\u001b[39m=\u001b[39mcoin\u001b[39m.\u001b[39mamount, denom\u001b[39m=\u001b[39mcoin\u001b[39m.\u001b[39mdenom) \u001b[39mfor\u001b[39;00m coin \u001b[39min\u001b[39;00m resp\u001b[39m.\u001b[39mbalances]\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/grpc/_channel.py:946\u001b[0m, in \u001b[0;36m_UnaryUnaryMultiCallable.__call__\u001b[0;34m(self, request, timeout, metadata, credentials, wait_for_ready, compression)\u001b[0m\n\u001b[1;32m    937\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m,\n\u001b[1;32m    938\u001b[0m              request,\n\u001b[1;32m    939\u001b[0m              timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    942\u001b[0m              wait_for_ready\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    943\u001b[0m              compression\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    944\u001b[0m     state, call, \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_blocking(request, timeout, metadata, credentials,\n\u001b[1;32m    945\u001b[0m                                   wait_for_ready, compression)\n\u001b[0;32m--> 946\u001b[0m     \u001b[39mreturn\u001b[39;00m _end_unary_response_blocking(state, call, \u001b[39mFalse\u001b[39;49;00m, \u001b[39mNone\u001b[39;49;00m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/grpc/_channel.py:849\u001b[0m, in \u001b[0;36m_end_unary_response_blocking\u001b[0;34m(state, call, with_call, deadline)\u001b[0m\n\u001b[1;32m    847\u001b[0m         \u001b[39mreturn\u001b[39;00m state\u001b[39m.\u001b[39mresponse\n\u001b[1;32m    848\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 849\u001b[0m     \u001b[39mraise\u001b[39;00m _InactiveRpcError(state)\n",
-      "\u001b[0;31m_InactiveRpcError\u001b[0m: <_InactiveRpcError of RPC that terminated with:\n\tstatus = StatusCode.INVALID_ARGUMENT\n\tdetails = \"rpc error: code = InvalidArgument desc = invalid address: invalid Bech32 prefix; expected orai, got fetch: invalid request\"\n\tdebug_error_string = \"{\"created\":\"@1666768922.751477000\",\"description\":\"Error received from peer ipv4:18.223.242.70:9090\",\"file\":\"src/core/lib/surface/call.cc\",\"file_line\":967,\"grpc_message\":\"rpc error: code = InvalidArgument desc = invalid address: invalid Bech32 prefix; expected orai, got fetch: invalid request\",\"grpc_status\":3}\"\n>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "994900orai\n"
      ]
     }
    ],
@@ -74,7 +45,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bip_utils import Bip39SeedGenerator, Bip44, Bip44Coins\n",
+    "\n",
+    "mnemonic = \"person knife december tail tortoise jewel warm when worry limit reward memory piece cool sphere kitchen knee embody soft own victory sauce silly page\"\n",
+    "seed_bytes = Bip39SeedGenerator(mnemonic).Generate()\n",
+    "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.COSMOS).DeriveDefaultPath()\n",
+    "\n",
+    "wallet = LocalWallet(PrivateKey(bip44_def_ctx.PrivateKey().Raw().ToBytes()))"
+   ]
   }
  ],
  "metadata": {
