--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -42,18 +42,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bip_utils import Bip39SeedGenerator, Bip44, Bip44Coins\n",
-    "\n",
+    "from cosmpy.aerial.wallet import LocalWallet\n",
+    "from cosmpy.crypto.keypairs import PrivateKey\n",
     "mnemonic = \"person knife december tail tortoise jewel warm when worry limit reward memory piece cool sphere kitchen knee embody soft own victory sauce silly page\"\n",
     "seed_bytes = Bip39SeedGenerator(mnemonic).Generate()\n",
     "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.COSMOS).DeriveDefaultPath()\n",
     "\n",
     "wallet = LocalWallet(PrivateKey(bip44_def_ctx.PrivateKey().Raw().ToBytes()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch1je7r8yuqgaf5f2tx4z2f9008wp4jx0ctll0s30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(wallet.address())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
