--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -49,7 +49,7 @@
     "from bip_utils import Bip39SeedGenerator, Bip44, Bip44Coins\n",
     "from cosmpy.aerial.wallet import LocalWallet\n",
     "from cosmpy.crypto.keypairs import PrivateKey\n",
-    "mnemonic = \"person knife december tail tortoise jewel warm when worry limit reward memory piece cool sphere kitchen knee embody soft own victory sauce silly page\"\n",
+    "mnemonic = \"post thank coil equip shop march above very elbow all few style disease priority mansion quit order top chalk swear intact include off melt\"\n",
     "seed_bytes = Bip39SeedGenerator(mnemonic).Generate()\n",
     "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.COSMOS).DeriveDefaultPath()\n",
     "\n",
