--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetch1je7r8yuqgaf5f2tx4z2f9008wp4jx0ctll0s30\n"
+      "fetch1zze9d5xk2xa2g44xdf7g9eltlzvn5hm2hsklgj\n"
      ]
     }
    ],
    "source": [
-    "print(wallet.address())"
+    "wallet."
    ]
   },
   {
