--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -58,19 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fetch1zze9d5xk2xa2g44xdf7g9eltlzvn5hm2hsklgj\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<bip_utils.bip.bip44.bip44.Bip44 at 0x7fe621207dc0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "wallet."
+    "bip44_def_ctx"
    ]
   },
   {
