--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +67,13 @@
        "'fetch1zze9d5xk2xa2g44xdf7g9eltlzvn5hm2hsklgj'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wallet"
+    "balances = ledger_client.query_bank_all_balances(wallet)"
    ]
   },
   {
