--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -51,7 +51,7 @@
     "from cosmpy.crypto.keypairs import PrivateKey\n",
     "mnemonic = \"post thank coil equip shop march above very elbow all few style disease priority mansion quit order top chalk swear intact include off melt\"\n",
     "seed_bytes = Bip39SeedGenerator(mnemonic).Generate()\n",
-    "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.C).DeriveDefaultPath()\n",
+    "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.COSMOS).DeriveDefaultPath()\n",
     "\n",
     "wallet = LocalWallet(PrivateKey(bip44_def_ctx.PrivateKey().Raw().ToBytes()))"
    ]
