--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -24,7 +24,7 @@
    ],
    "source": [
     "cfg = NetworkConfig(\n",
-    "    chain_id=\"Oraichain\",\n",
+    "    chain_id=\"Oraichain-testnet\",\n",
     "    url=\"grpc+http://18.223.242.70:9090\",\n",
     "    fee_minimum_gas_price=1,\n",
     "    fee_denomination=\"orai\",\n",
@@ -78,21 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "994900\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Coin(amount='994900', denom='orai')]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "balances = ledger_client.query_bank_all_balances('orai1zze9d5xk2xa2g44xdf7g9eltlzvn5hm2h7fctk')\n",
-    "for coin in balances:\n",
-    "  print(f'{coin.amount}')"
+    "balances"
    ]
   },
   {
