--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "cfg = NetworkConfig(\n",
     "    chain_id=\"Oraichain-testnet\",\n",
-    "    url=\"grpc+https://testnet-rpc.orai.io\",\n",
+    "    url=\"grpc+http://18.118.151.163:9090\",\n",
     "    fee_minimum_gas_price=1,\n",
     "    fee_denomination=\"orai\",\n",
     "    staking_denomination=\"orai\",\n",
