--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -55,7 +55,7 @@
     "from bip_utils import Bip39SeedGenerator, Bip44, Bip44Coins\n",
     "from cosmpy.aerial.wallet import LocalWallet\n",
     "from cosmpy.crypto.keypairs import PrivateKey\n",
-    "mnemonic = \"\"\n",
+    "mnemonic = os.Pr\n",
     "seed_bytes = Bip39SeedGenerator(mnemonic).Generate()\n",
     "bip44_def_ctx = Bip44.FromSeed(seed_bytes, Bip44Coins.COSMOS).DeriveDefaultPath()\n",
     "\n",
