--- a/tsst.ipynb
+++ b/tsst.ipynb
@@ -55,6 +55,7 @@
     "from bip_utils import Bip39SeedGenerator, Bip44, Bip44Coins\n",
     "from cosmpy.aerial.wallet import LocalWallet\n",
     "from cosmpy.crypto.keypairs import PrivateKey\n",
+    "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
