--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "        \n",
     "### Create file csv data from sample\n",
-    "data_source = 'AAPL Historical Data.csv'\n",
+    "data_source = 'website_classification.csv'\n",
     "folder = data_source.split('.')[0]\n",
     "try:\n",
     "    os.mkdir(folder)\n",
