--- a/main.ipynb
+++ b/main.ipynb
@@ -12,17 +12,7 @@
     "        \n",
     "### Create file csv data from sample\n",
     "data_source = 'website_classification.csv'\n",
-    "folder = data_source.split('.')[0]\n",
-    "try:\n",
-    "    os.mkdir(folder)\n",
-    "except:\n",
-    "    pass\n",
-    "data_original = pd.read_csv(data_source)\n",
-    "for i in range(20):\n",
-    "    index_random = random.randint(0,len(data_original['Date'])-60)\n",
-    "    data_original = data_original[index_random:index_random+60]\n",
-    "    data_original.to_csv(folder+'/'+folder+'('+str(i+1)+').csv',index=False)\n",
-    "    data = data_original['Price']"
+    "folder = data_source.split('.')[0]"
    ]
   },
   {
