--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     "        \n",
     "### Create file csv data from sample\n",
     "data_source = 'website_classification.csv'\n",
-    "folder = data_source.split('.')[0]"
+    "folder = pd.read_csv(data_source)"
    ]
   },
   {
