--- a/main.ipynb
+++ b/main.ipynb
@@ -17,33 +17,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = []\n",
+    "for i in folder['Category']:\n",
+    "    if i not in t:\n",
+    "        t.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       Travel\n",
-       "1       Travel\n",
-       "2       Travel\n",
-       "3       Travel\n",
-       "4       Travel\n",
-       "         ...  \n",
-       "1403     Adult\n",
-       "1404     Adult\n",
-       "1405     Adult\n",
-       "1406     Adult\n",
-       "1407     Adult\n",
-       "Name: Category, Length: 1408, dtype: object"
+       "['Travel',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'News',\n",
+       " 'Streaming Services',\n",
+       " 'Sports',\n",
+       " 'Photography',\n",
+       " 'Law and Government',\n",
+       " 'Health and Fitness',\n",
+       " 'Games',\n",
+       " 'E-Commerce',\n",
+       " 'Forums',\n",
+       " 'Food',\n",
+       " 'Education',\n",
+       " 'Computers and Technology',\n",
+       " 'Business/Corporate',\n",
+       " 'Adult']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder['Category']"
+    "t"
    ]
   },
   {
