--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        " 'Adult']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('./website_classification.csv','r',encoding='utf-8')"
+   ]
   }
  ],
  "metadata": {
