--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./website_classification.csv','r',encoding='utf-8')"
+    "with open('./website_classification.csv','r',encoding='utf-8') as f:\n",
+    "    string = f.read().splitline()"
    ]
   }
  ],
