--- a/main.ipynb
+++ b/main.ipynb
@@ -64,12 +64,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./website_classification.csv','r',encoding='utf-8') as f:\n",
-    "    string = f.read().splitline()"
+    "    string = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas = string.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in datas:\n",
+    "    i.split(',')"
    ]
   }
  ],
