--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,21 @@
     "        \n",
     "### Create file csv data from sample\n",
     "data_source = 'website_classification.csv'\n",
-    "folder = pd.read_csv(data_source)"
+    "folder = pd.read_csv(data_source,index_col=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = folder['Category']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +62,7 @@
        " 'Adult']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,32 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./website_classification.csv','r',encoding='utf-8') as f:\n",
-    "    string = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datas = string.splitlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in datas:\n",
-    "    i.split(',')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
