--- a/main.ipynb
+++ b/main.ipynb
@@ -17,15 +17,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = folder['Category']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -76,7 +67,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "set_A = ['Travel',\n",
+    " 'Social Networking and Messaging',\n",
+    " 'News',\n",
+    " 'Streaming Services']\n",
+    "for i in folder['Category']:\n",
+    "    if i not in "
+   ]
   }
  ],
  "metadata": {
