--- a/main.ipynb
+++ b/main.ipynb
@@ -68,12 +68,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame_new = []\n",
     "set_A = ['Travel',\n",
     " 'Social Networking and Messaging',\n",
     " 'News',\n",
     " 'Streaming Services']\n",
     "for i in folder['Category']:\n",
-    "    if i not in "
+    "    if i in set_A:\n",
+    "        "
    ]
   }
  ],
