--- a/main.ipynb
+++ b/main.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +73,427 @@
     " 'Social Networking and Messaging',\n",
     " 'News',\n",
     " 'Streaming Services']\n",
-    "for i in folder['Category']:\n",
-    "    if i in set_A:\n",
-    "        "
+    "for i in folder:\n",
+    "    if i['Category'] in set_A:\n",
+    "        frame_new.append(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'News',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Travel',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Streaming Services',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'News',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'Social Networking and Messaging',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'Travel',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'News',\n",
+       " 'Travel',\n",
+       " 'News']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
