--- a/main.ipynb
+++ b/main.ipynb
@@ -64,9 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [47], line 7\u001b[0m\n\u001b[0;32m      2\u001b[0m set_A \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mTravel\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      3\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mSocial Networking and Messaging\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mNews\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mStreaming Services\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m folder:\n\u001b[1;32m----> 7\u001b[0m    \u001b[39mprint\u001b[39m(i\u001b[39m.\u001b[39;49mvalue)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'value'"
+     ]
+    }
+   ],
    "source": [
     "frame_new = []\n",
     "set_A = ['Travel',\n",
@@ -74,8 +86,7 @@
     " 'News',\n",
     " 'Streaming Services']\n",
     "for i in folder:\n",
-    "    if i['Category'] in set_A:\n",
-    "        frame_new.append(i)"
+    "   "
    ]
   },
   {
