--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aasdkjabd = ['Travel',\n",
+    " 'Social Networking and Messaging',\n",
+    " 'News',\n",
+    " 'Streaming Services',\n",
+    " 'Sports',\n",
+    " 'Photography',\n",
+    " 'Law and Government',\n",
+    " 'Health and Fitness',\n",
+    " 'Games',\n",
+    " 'E-Commerce',\n",
+    " 'Forums',\n",
+    " 'Food',\n",
+    " 'Education',\n",
+    " 'Computers and Technology',\n",
+    " 'Business/Corporate',\n",
+    " 'Adult']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
@@ -29,13 +53,6 @@
     "w.write(strings)\n",
     "w.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
