--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import json\n",
+    "data_source = 'website_classification.csv'\n",
+    "\n",
+    "w = open('./data/data(1-4).csv','r',encoding='utf-8').read().splitlines()\n",
+    "data100 = random.choices(w,k=100)\n",
+    "for i in data100:\n",
+    "    a = i.split(',')[1]\n",
+    "    json_new = \"\"\"{\"website\": \"<iframe src='\"\"\"+a+\"\"\"'width='100%' height='600px'/>\"}\"\"\"\n",
+    "    with open(\"./data/data1-4/data(\"+str(random.randint(1,99999))+\").json\", \"w\") as outfile:\n",
+    "        outfile.write(json_new)"
+   ]
   }
  ],
  "metadata": {
